[package]
name = "bisne-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
serde = { version = "1.0.144", features = [ "derive" ] }

serde_json = "1.0.85"
# simd-json = "0.6.0"

regex = "1.6.0"
lazy_static = "1.4.0"

mimalloc = "0.1.29"