[package]
name = "bisne-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
serde = { version = "1.0.144", features = [ "derive" ] }
regex = "1.6.0"
# serde_json = "1.0.85"
simd-json = { version = "0.6.0", features = [ "known-key" ] }
thread_io = "0.3.0"
rayon = "1.5.3"
mimalloc = "0.1.29"

[profile.release]
lto = "thin" # way long compiles, small boost